# baselithcore

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .markdownlintignore  .mdlrc  .pre-commit-config.yaml  .releaserc  .yamllint-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile-full  Dockerfile-slim  LICENSE  README.md  REFACTORING_LOG.md  SECURITY.md  alembic.ini  backend.py  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  log_config.yaml  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  routes.json  test_zip.py
.devcontainer/: README.md  devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml  docs.yml  eval-nightly.yml  release-image.yml  semgrep.yml
.serena/: project.yml
adrs/: 0001-sacred-core-boundaries.md
backstage-portal/: README.md  app-config.production.yaml  app-config.yaml  catalog-info.yaml  playwright.config.ts
backstage-portal/deploy/: README.md  backstage-portal.env.example  backstage-portal.service
benchmarks/: README.md  run.py
cache/: marketplace_registry.json
configs/: .env.base  .env.development  .env.production  .env.test  README.md  plugins.yaml  plugins.yaml.example
core/: __init__.py  _version.py  context.py  exceptions.py
core/a2a/: __init__.py  a2ui.py  agent_card.py  client.py  discovery.py  protocol.py  router.py  security.py  server.py  task_streams.py  types.py
core/adversarial/: __init__.py  boundary.py  fuzzer.py  red_team.py  traps.py  types.py
core/agents/: __init__.py  browser_agent.py  browser_tools.py  browser_types.py  coding_tools.py
core/api/: __init__.py  _plugin_runtime.py  errors.py  events.py  factory.py  lifespan.py  pagination.py  spa.py  startup_checks.py
core/auth/: __init__.py  api_keys.py  jwt.py  manager.py  mfa.py  mfa_guard.py  oidc.py  scopes.py  types.py
core/bootstrap/: __init__.py  lazy_init.py
core/cache/: __init__.py  local_cache.py  metrics.py  protocols.py  redis_cache.py  semantic_cache.py  single_flight.py  ttl_cache.py
core/chat/: __init__.py  agent_state.py  context.py  dependencies.py  factory.py  feedback.py  guardrails.py  history.py  prompt.py  prompt_engine.py  rag_workflow.py  reranking.py  response.py  service.py  streaming.py  workflow_planner.py  workflow_response.py  workflow_retrieval.py  workflow_validation.py  workflows.py
core/cli/: __init__.py  __main__.py  handlers.py  ui.py
core/config/: __init__.py  app.py  base.py  cache.py  env.py  environment.py  evaluation.py  events.py  incidents.py  mcp.py  memory.py  orchestration.py  plugins.py  prioritization.py  privacy.py  processing.py  quotas.py  reasoning.py  reflection.py  resilience.py  sandbox.py  scraper.py  security.py  services.py  storage.py  swarm.py  task_queue.py  thirdparty.py  transparency.py  webhooks.py  world_model.py
core/db/: __init__.py  connection.py  documents.py  feedback.py  schema.py  serializers.py  utils.py
core/di/: __init__.py  container.py  lazy_registry.py
core/doc_sources/: __init__.py  filesystem.py  labels.py  models.py  ocr_backends.py  readers.py  registry.py  utils.py  web.py  web_constants.py  web_parser.py
core/evaluation/: __init__.py  base.py  judges.py  metrics.py  prompt_eval.py  protocols.py  regression_runner.py  service.py  trajectory.py
core/events/: __init__.py  _singleton.py  bus.py  listener.py  names.py  types.py  validation.py
core/exploration/: __init__.py  explorer.py  hypothesis.py
core/feature_flags/: __init__.py  manager.py
core/finetuning/: __init__.py  dataset.py  models.py  pipeline.py  providers.py
core/goals/: __init__.py  tracker.py
core/graph/: __init__.py  code_graph.py  core.py  linking.py  operations.py  query_builder.py  retrieval.py
core/guardrails/: __init__.py  config.py  indirect.py  input_guard.py  output_guard.py
core/human/: __init__.py  interaction.py
core/incidents/: __init__.py  dora.py  dora_service.py  persistence.py  service.py  types.py
core/interfaces/: __init__.py  services.py
core/learning/: __init__.py  auto_finetuning.py  evolution.py  experience_buffer.py  feedback.py  learning_loop.py  policy_optimizer.py  reward_model.py  types.py
core/lifecycle/: __init__.py  deterministic.py  errors.py  mixins.py  protocols.py
core/marketplace/: __init__.py  auth.py  installer.py  models.py  publisher.py  registry.py  validator.py
core/mcp/: __init__.py  client.py  handlers.py  http_client_transport.py  http_transport.py  pool.py  server.py  tools.py  types.py
core/memory/: __init__.py  compression.py  folding.py  graph_provider.py  hierarchy.py  hierarchy_config.py  hierarchy_context.py  hierarchy_search.py  hybrid_search.py  interfaces.py  lifecycle.py  manager.py  metrics.py  (+5 more)
deploy/: README.md
examples/: README.md  baselith_standard_example.py  demo_adversarial.py  demo_browser.py  demo_coding.py  demo_meta_agent.py  demo_reasoning.py  demo_swarm.py  demo_vision.py  demo_voice.py
migrations/: env.py  script.py.mako
mkdocs-site/: zensical.toml
plugins/: __init__.py
scripts/: __init__.py  backup-db.sh  backup_graph.py  benchmark.py  chaos_campaign.sh  check_architecture_boundaries.py  check_core_resilience_typing.py  check_distribution_artifacts.py  check_official_plugin_typing.py  check_plugin_integrity.py  cleanup_ghost_nodes.py  cli.py  export_openapi.py  migrate_plugins.py  prod-preflight.sh  reset_all.py  reset_analytics_db.py  reset_graphdb.py  reset_qdrant.py  restore-db.sh  restore_graph_backup.py  run_eval.py  run_prompt_regression.py  sign_changed_plugins.py  update_test_badge.py  verify-backup.sh
sdk/: openapi.json
sdk/python/: README.md  pyproject.toml
sdk/python/baselith_sdk/: __init__.py  client.py  errors.py  models.py  version.py
sdk/python/tests/: test_client.py  test_contract.py
tests/: __init__.py  _bootstrap.py  conftest.py  repro_red_team_detection.py  smoke_chat.sh
validation-reports/: README.md
(+1049 files in other folders)
