[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baselith-sdk"
version = "0.1.0"
description = "Typed Python client for the BaselithCore API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "BaselithCore" }]
keywords = ["baselith", "agentic", "ai", "sdk", "client"]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://baselithcore.xyz"
Documentation = "https://docs.baselithcore.xyz"
Repository = "https://github.com/baselithcore/baselithcore"

[tool.setuptools.packages.find]
include = ["baselith_sdk*"]

[tool.setuptools.package-data]
baselith_sdk = ["py.typed"]
